--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Magento 2 Category List",
     "type": "magento2-module",
     "version": "2.1.11",
+    "minimum-stability": "dev",
     "license": [
         "MIT"
     ],
