--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "magento2-module",
     "version": "2.1.11",
     "require": {},
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
     "license": [
         "MIT"
     ],
