--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "description": "Magento 2 Category List",
     "type": "magento2-module",
     "version": "1.0",
-    "require": {},
+    "require": {
+    "require": {
+          "php": ">=5.6",
+   },
     "minimum-stability": "dev",
     "license": [
         "MIT"
