--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "magento2-module",
     "version": "1.0",
     "require": {
-          "php": ">=5.6",
-   },
+      "php": ">=5.6"
+    },
     "minimum-stability": "dev",
     "license": [
         "MIT"
