--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "magento2-module",
     "version": "1.0",
     "require": {
-      "php": ">=5.6"
+      "php": ">=5.6",
+       "fanikioski-magekey/module-category-list-widget": "@stable"
     },
     "minimum-stability": "stable",
     "prefer-stable": false,
