--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
       "php": ">=5.6"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": false,
     "license": [
         "MIT"
