--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "fanikioski-magekey/module-category-list-widget",
     "description": "Magento 2 Category List",
     "type": "magento2-module",
-    "version": "2.1.11",
+    "version": "1.0.0",
+    "require": {
+      "php": ">=5.6"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": false,
     "license": [
         "MIT"
     ],
